# kews-indicator

./: .clang-format  .clangd  meson.build
include/: modules.hh  window.hh
src/: main.cc  meson.build  modules.cc  window.cc
subprojects/: jsoncpp.wrap
